--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <div id="app">
             <div id="game-container"></div>
         </div>
+        <div style="position: absolute; left: -1000px; visibility: hidden">
+            .
+        </div>
         <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
